# rust_boy

./: .gitignore  Cargo.toml  build.rs  mk_script.sh
codegen/: .gitignore  Cargo.toml
codegen/src/: assembler.rs  fetch.rs  generate.rs  inst_grammar.pest  inst_parser.rs  main.rs  options.rs
codegen/src/templates/: assembler.rs  inst.rs  macros.rs
src/: cpu.rs  main.rs  mmu.rs  options.rs
