[package]
name = "rust_boy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4"
log4rs = "1.1.1"
regex = "1.0"
lazy_static = "1.2"
clap    = {version = "3.1.15", features = ["derive", "wrap_help", "env"] }