[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11"
curl    = "0.4"
pest    = "2.1"
pest_derive = "2.0"
env_logger = "0.5"
log = "0.4"
regex = "1.0"
lazy_static = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"