[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11"
curl    = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
pest_derive = "2.0"
pest    = "2.1"

log = "0.4"
log4rs = "1.1.1"
regex = "1.0"
lazy_static = "1.2"
